--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -40,7 +40,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="./">Rezervacije <span class="sr-only">(current)</span></a></li>
                         <li><a href="../navbar-static-top/">Setup</a></li>
-                        <li ng-if="currentUser"><a href="../navbar-fixed-top/">Odjavi se</a></li>
+                        <li ng-if="currentUser"><a href data-ng-click="logout()">Odjavi se</a></li>
                         <li ng-if="currentUser"><a href="../navbar-fixed-top/">{{ currentUser.username }}</a></li>
                     </ul>
                 </div><!--/.navbar-collapse -->
