--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -15,8 +15,6 @@
     <link rel="images/apple-touch-icon" href="apple-touch-icon.png" />
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="bower_components/angularjs-slider/dist/rzslider.css" />
-
-
     <link rel="stylesheet" type="text/css" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.7.1/themes/base/jquery-ui.css">
 
   </head>
@@ -93,6 +91,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/logincontroller.js"></script>
         <script src="scripts/controllers/maincontroller.js"></script>
+        <script src="scripts/directives/calendar.js"></script>
         <script src="scripts/directives/draggabletable.js"></script>
         <script src="scripts/directives/timeline.js"></script>
         <script src="scripts/services/authenticationfactory.js"></script>
