--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -39,7 +39,7 @@
                         <li class="active"><a href="./">Rezervacije <span class="sr-only">(current)</span></a></li>
                         <li><a href="../navbar-static-top/">Setup</a></li>
                         <li ng-if="currentUser"><a href data-ng-click="logout()">Odjavi se</a></li>
-                        <li ng-if="currentUser"><a href="../navbar-fixed-top/">{{ currentUser.username }}</a></li>
+                        <li ng-if="currentUser"><a href="../navbar-fixed-top/">{{ currentUser }}</a></li>
                     </ul>
                 </div><!--/.navbar-collapse -->
             </div>
@@ -98,7 +98,6 @@
         <script src="scripts/services/authenticationinterceptor.js"></script>
         <script src="scripts/services/guestfactory.js"></script>
         <script src="scripts/services/reservationfactory.js"></script>
-        <script src="scripts/services/session.js"></script>
         <script src="scripts/services/tablefactory.js"></script>
         <script src="scripts/unique.js"></script>
 
