Dodata dugmad za pravljenje nove rezervacije. Dodati placeholderi za izbor sprata

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -44,6 +44,22 @@
                 </div><!--/.navbar-collapse -->
             </div>
         </nav>
+        <section class="breadcrumb-custom">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-6">
+                        <ul class="breadcrumb">
+                            <li><a href="#">Biber</a></li>
+                            <li class="active"><a href="#">Prizemlje</a></li>
+                            <li><a href="#">Prvi sprat</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 text-right">
+                        <a class="main-button" href="#/home/newreservation" ui-sref="home.newreservation"><i class="glyphicon glyphicon-plus"></i>NOVA REZERVACIJA</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 <!-- <ng-view>
 
 </ng-view> -->
