Promenjena povratna vrednost za dohvatanje rezervacija po id-u. Dodat templejt za menjanje postojece rezervacije.

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -30,7 +30,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="#/home">
                         <img src="images/logo-rezervoar.png" alt="Logo Rezervoar"/>
                     </a>
                 </div>
