Omoguceno menjanje postojece rezervacije. Koriscenje radnog vremena iz baze. Promenjena upotreba slajdera (nova verzija). Dodat serializer za restoran. Refaktorisanje metoda na backend-u.

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Rezervoar</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
@@ -116,6 +116,7 @@
         <script src="scripts/services/guestfactory.js"></script>
         <script src="scripts/services/levelfactory.js"></script>
         <script src="scripts/services/reservationfactory.js"></script>
+        <script src="scripts/services/restaurantfactory.js"></script>
         <script src="scripts/services/tablefactory.js"></script>
         <script src="scripts/unique.js"></script>
 
