Omoguceno biranje stolova iz ponudjene liste prilikom kreiranja ili menjanja rezervacije

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="bower_components/angularjs-slider/dist/rzslider.css" />
     <link rel="stylesheet" type="text/css" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.7.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/ng-tags-input/ng-tags-input.css">
 
   </head>
   <body ng-app="rezervoarApp" ng-controller='MainController'>
@@ -98,6 +99,7 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/angular-i18n/angular-locale_sr-latn-rs.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/ng-tags-input/ng-tags-input.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
